versions/v2.10/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
= 4. Install {rancher-product-name}
:page-languages: [en, zh]
:revdate: 2026-08-03
:page-revdate: {revdate}
:community-path: getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-rancher-ha.adoc
:product-path: installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
ifeval::["{build-type}" != "community"]
:xref-helm-chart-options: xref:installation-and-upgrade/references/helm-chart-options.adoc
:xref-tls-secrets: xref:installation-and-upgrade/resources/tls-secrets.adoc
:xref-upgrade-certmanager: xref:installation-and-upgrade/resources/upgrade-cert-manager.adoc
:xref-install-upgrade-troubleshooting: xref:installation-and-upgrade/troubleshooting/troubleshooting.adoc
:xref-helm-reqs: xref:installation-and-upgrade/requirements/helm-version-requirements.adoc
:xref-rancher-extensions: xref:integrations/rancher-extensions.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-helm-chart-options: xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc
:xref-tls-secrets: xref:getting-started/installation-and-upgrade/resources/add-tls-secrets.adoc
:xref-upgrade-certmanager: xref:getting-started/installation-and-upgrade/resources/upgrade-cert-manager.adoc
:xref-install-upgrade-troubleshooting: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/troubleshooting.adoc
:xref-helm-reqs: xref:getting-started/installation-and-upgrade/resources/helm-version-requirements.adoc
:xref-rancher-extensions: xref:integrations-in-rancher/rancher-extensions.adoc
endif::[]


This section is about how to deploy Rancher for your air gapped environment in a high-availability Kubernetes installation. An air gapped environment could be where Rancher server will be installed offline, behind a firewall, or behind a proxy.

== Privileged Access for Rancher

When the Rancher server is deployed in the Docker container, a local Kubernetes cluster is installed within the container for Rancher to use. Because many features of Rancher run as deployments, and privileged mode is required to run containers within containers, you will need to install Rancher with the `--privileged` option.

== Docker Instructions

If you want to continue the air gapped installation using Docker commands, skip the rest of this page and follow the instructions on xref:[this page.]

== Kubernetes Instructions

Rancher recommends installing Rancher on a Kubernetes cluster. A highly available Kubernetes install is comprised of three nodes running the Rancher server components on a Kubernetes cluster. The persistence layer (etcd) is also replicated on these three nodes, providing redundancy and data duplication in case one of the nodes fails.

=== 1. Add the Helm Chart Repository

From a system that has access to the internet, fetch the latest Helm chart and copy the resulting manifests to a system that has access to the Rancher server cluster.

. If you haven't already, install `helm` locally on a workstation that has internet access. Note: Refer to the {xref-helm-reqs}[Helm version requirements] to choose a version of Helm to install Rancher.

ifeval::["{build-type}" == "product"]
. Use the `helm repo add` command to add the Helm chart repository that contains charts to install Rancher Prime.
+
[,shell]
----
helm repo add rancher-prime <helm-chart-repo-url>
----
+
include::shared:ROOT:partial$en/helm-chart-repo-url.adoc[]
endif::[]

ifeval::["{build-type}" == "community"]
. Use `helm repo add` command to add the Helm chart repository that contains charts to install Rancher. For more information about the repository choices and which is best for your use case, see xref:getting-started/installation-and-upgrade/resources/choose-a-rancher-version.adoc[Choosing a Rancher Version].

** Latest: Recommended for trying out the newest features.
+
[,shell]
----
helm repo add rancher-latest https://releases.rancher.com/server-charts/latest
----

** Stable: Recommended for production environments.
+
[,shell]
----
helm repo add rancher-stable https://releases.rancher.com/server-charts/stable
----

** Alpha: Experimental preview of upcoming releases.
+
[,shell]
----
helm repo add rancher-alpha https://releases.rancher.com/server-charts/alpha
----
+
[NOTE]
====
Upgrades are not supported to, from, or between Alphas.
====
endif::[]

ifeval::["{build-type}" == "product"]
. Fetch the Rancher Prime chart. This will pull down the chart and save it in the current directory as a `.tgz` file.
** To fetch the latest version:
+
[,shell]
----
helm fetch rancher-prime/rancher
----
** To fetch a specific version:
+
.. Check to see which version of Rancher Prime are available.
+
[,shell]
----
helm search repo --versions rancher-prime
----
+
.. Fetch a specific version by specifying the `--version` parameter:
+
[,shell]
----
helm fetch rancher-prime/rancher --version=<version>
----
endif::[]

ifeval::["{build-type}" == "community"]
. Fetch the latest Rancher chart. This will pull down the chart and save it in the current directory as a `.tgz` file.
+
[,plain]
----
 helm fetch rancher-<CHART_REPO>/rancher
----
+
If you require a specific version of Rancher, you can fetch this with the Helm `--version` parameter like in the following example:
+
[,plain]
----
 helm fetch rancher-stable/rancher --version=v2.4.8
----
endif::[]

=== 2. Choose your SSL Configuration

Rancher Server is designed to be secure by default and requires SSL/TLS configuration.

When Rancher is installed on an air gapped Kubernetes cluster, there are two recommended options for the source of the certificate.

[NOTE]
====

If you want terminate SSL/TLS externally, see {xref-helm-chart-options}#_external_tls_termination[TLS termination on an External Load Balancer].
====


|===
| Configuration | Chart option | Description | Requires cert-manager

| Rancher Generated Self-Signed Certificates
| `ingress.tls.source=rancher`
| Use certificates issued by Rancher's generated CA (self signed) +
This is the *default* and does not need to be added when rendering the Helm template.
| yes

| Certificates from Files
| `ingress.tls.source=secret`
| Use your own certificate files by creating Kubernetes Secret(s). +
This option must be passed when rendering the Rancher Helm template.
| no
|===

=== Helm Chart Options for Air Gap Installations

When setting up the Rancher Helm template, there are several options in the Helm chart that are designed specifically for air gap installations.

|===
| Chart Option | Chart Value | Description

| `certmanager.version`
| `<version>`
| Configure proper Rancher TLS issuer depending of running cert-manager version.

| `systemDefaultRegistry`
| `<REGISTRY.YOURDOMAIN.COM:PORT>`
| Configure Rancher server to always pull from your private registry when provisioning clusters.

| `useBundledSystemChart`
| `true`
| Configure Rancher server to use the packaged copy of Helm charts. The charts repository contains all the catalog items required for features such as monitoring, logging, alerting, and global DNS. These Helm charts are located in the https://github.com/rancher/charts[Rancher Charts GitHub repository] or served via the https://git.rancher.io/charts[Main mirror]. In an air-gapped environment, using the bundled charts within Rancher is much easier than setting up a Git mirror.
|===

=== 3. Fetch the Cert-Manager Chart

Based on the choice your made in <<_2_choose_your_ssl_configuration,2. Choose your SSL Configuration>>, complete one of the procedures below.

==== Option A: Default Self-Signed Certificate

ifeval::["{build-type}" != "community"]
===== Fetch from SUSE Application Collection

Use this option to pull the security-hardened cert-manager chart listed in the https://apps.rancher.io/applications/cert-manager[SUSE Application Collection] (AppCo) available to Prime users.

. Log in to AppCo registry on an internet-connected machine:
+
Use your https://docs.apps.rancher.io/get-started/authentication[enterprise credentials] to log in to the secure SUSE Application Collection registry:
+
[source,shell]
----
helm registry login dp.apps.rancher.io -u <username-or-service-account-username> -p <access-token-or-service-account-token>
----

. Export and download the OCI chart archive:
+
Use `helm pull` to download the chart directly from the OCI registry as a local tarball:
+
[source,shell]
----
helm pull oci://dp.apps.rancher.io/charts/cert-manager --version <cert-manager-version>
----
+
This saves `cert-manager-<cert-manager-version>.tgz` to your current working directory.

. Populate the Private Registry with AppCo Images.
+
Before installing cert-manager inside the air-gapped cluster, you must pull the secure container images from SUSE on your internet-connected machine, save them, transfer them via secure media (like a USB drive), and push them to your local registry.
+
The below command pulls the secure container images from SUSE:
+
[source,shell]
----
docker pull dp.apps.rancher.io/cert-manager-controller:<cert-manager-version>
docker pull dp.apps.rancher.io/cert-manager-cainjector:<cert-manager-version>
docker pull dp.apps.rancher.io/cert-manager-webhook:<cert-manager-version>
----
+
The below command saves, transfers, and retags the images for your internal air-gapped registry:
+
[source,shell]
----
# Save to tarball
docker save -o cert-manager-appco.tar \
   dp.apps.rancher.io/cert-manager-controller:<cert-manager-version> \
   dp.apps.rancher.io/cert-manager-cainjector:<cert-manager-version> \
   dp.apps.rancher.io/cert-manager-webhook:<cert-manager-version>

# Transfer the tar file and chart .tgz file into the air-gapped network

# Load on air-gapped machine
docker load -i cert-manager-appco.tar

# Retag for your internal registry (e.g., registry.internal.corp)
docker tag dp.apps.rancher.io/cert-manager-controller:<cert-manager-version> <registry.internal.corp>/cert-manager-controller:<cert-manager-version>
docker tag dp.apps.rancher.io/cert-manager-cainjector:<cert-manager-version> <registry.internal.corp>/cert-manager-cainjector:<cert-manager-version>
docker tag dp.apps.rancher.io/cert-manager-webhook:<cert-manager-version> <registry.internal.corp>/cert-manager-webhook:<cert-manager-version>

# Push to internal registry
docker push <registry.internal.corp>/cert-manager-controller:<cert-manager-version>
docker push <registry.internal.corp>/cert-manager-cainjector:<cert-manager-version>
docker push <registry.internal.corp>/cert-manager-webhook:<cert-manager-version>
----
endif::[]

===== Fetch from Upstream Helm Jetstack Repository

Use this option to pull the community open-source chart.

By default, Rancher generates a CA and uses cert-manager to issue the certificate for access to the Rancher server interface.

[NOTE]
====

Recent changes to cert-manager require an upgrade. If you are upgrading Rancher and using a version of cert-manager older than v0.11.0, please see our {xref-upgrade-certmanager}[upgrade cert-manager documentation].
====


. Add the cert-manager Repo.
+
From a system connected to the internet, add the cert-manager repo to Helm:
+
[,plain]
----
helm repo add jetstack https://charts.jetstack.io
helm repo update
----

. Fetch the cert-manager Chart.
+
Fetch the latest cert-manager chart available from the https://artifacthub.io/packages/helm/cert-manager/cert-manager[Helm chart repository].
+
[,plain]
----
helm fetch jetstack/cert-manager --version v1.11.0
----

. Retrieve the cert-manager CRDs.
+
Download the required CRD file for cert-manager:
+
[,plain]
----
   curl -L -o cert-manager-crd.yaml https://github.com/cert-manager/cert-manager/releases/download/v1.11.0/cert-manager.crds.yaml
----

=== 4. Install Rancher

Copy the fetched charts to a system that has access to the Rancher server cluster to complete installation.

==== 1. Install cert-manager

Install cert-manager with the same options you would use to install the chart. Remember to set the `image.repository` option to pull the image from your private registry.

[NOTE]
====

To see options on how to customize the cert-manager install (including for cases where your cluster uses PodSecurityPolicies), see the https://artifacthub.io/packages/helm/cert-manager/cert-manager#configuration[cert-manager docs].
====

ifeval::["{build-type}" != "community"]
.Click to expand - SUSE Application Collection cert-manager Installation Instructions
[%collapsible]
======
. Create the namespace.
+
[source,shell]
----
kubectl create namespace cert-manager
----

. Install using the local chart tarball file.
+
[source,shell]
----
helm install cert-manager ./<cert-manager-version>.tgz \
  --namespace cert-manager \
  --set installCRDs=true \
  --set image.repository=<registry.internal.corp>/cert-manager-controller \
  --set webhook.image.repository=<registry.internal.corp>/cert-manager-webhook \
  --set cainjector.image.repository=<registry.internal.corp>/cert-manager-cainjector
----
======
endif::[]

.Click to expand - Helm Jetstack cert-manager Installation Instructions
[%collapsible]
======
If you are using self-signed certificates, install cert-manager:

. Create the namespace for cert-manager.
+
[,plain]
----
 kubectl create namespace cert-manager
----

. Create the cert-manager CustomResourceDefinitions (CRDs).
+
[,plain]
----
 kubectl apply -f cert-manager-crd.yaml
----

. Install cert-manager.
+
[,plain]
----
 helm install cert-manager ./cert-manager-v1.11.0.tgz \
     --namespace cert-manager \
     --set image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-controller \
     --set webhook.image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-webhook \
     --set cainjector.image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-cainjector \
     --set startupapicheck.image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-ctl
----
+
======

==== 2. Install Rancher

First, refer to {xref-tls-secrets}[Adding TLS Secrets] to publish the certificate files so Rancher and the ingress controller can use them.

Then, create the namespace for Rancher using kubectl:

[,plain]
----
kubectl create namespace cattle-system
----

Next, install Rancher, declaring your chosen options. Use the reference table below to replace each placeholder. Rancher needs to be configured to use the private registry in order to provision any Rancher launched Kubernetes clusters or Rancher tools.

|===
| Placeholder | Description

| `<VERSION>`
| The version number of the output tarball.

| `<RANCHER.YOURDOMAIN.COM>`
| The DNS name you pointed at your load balancer.

| `<REGISTRY.YOURDOMAIN.COM:PORT>`
| The DNS name for your private registry.

| `<CERTMANAGER_VERSION>`
| Cert-manager version running on k8s cluster.
|===

[,plain]
----
   helm install rancher ./rancher-<VERSION>.tgz \
    --namespace cattle-system \
    --set hostname=<RANCHER.YOURDOMAIN.COM> \
    --set certmanager.version=<CERTMANAGER_VERSION> \
    --set rancherImage=<REGISTRY.YOURDOMAIN.COM:PORT>/rancher/rancher \
    --set systemDefaultRegistry=<REGISTRY.YOURDOMAIN.COM:PORT> \ # Set a default private registry to be used in Rancher
    --set useBundledSystemChart=true # Use the packaged Rancher system charts
----

*Optional*: To install a specific Rancher version, set the `rancherImageTag` value, example: `--set rancherImageTag=v2.5.8`

==== Option B: Certificates From Files Using Kubernetes Secrets

===== 1. Create Secrets

Create Kubernetes secrets from your own certificates for Rancher to use. The common name for the cert will need to match the `hostname` option in the command below, or the ingress controller will fail to provision the site for Rancher.

===== 2. Install Rancher

Install Rancher, declaring your chosen options. Use the reference table below to replace each placeholder. Rancher needs to be configured to use the private registry in order to provision any Rancher launched Kubernetes clusters or Rancher tools.

|===
| Placeholder | Description

| `<VERSION>`
| The version number of the output tarball.

| `<RANCHER.YOURDOMAIN.COM>`
| The DNS name you pointed at your load balancer.

| `<REGISTRY.YOURDOMAIN.COM:PORT>`
| The DNS name for your private registry.
|===

[,plain]
----
   helm install rancher ./rancher-<VERSION>.tgz \
    --namespace cattle-system \
    --set hostname=<RANCHER.YOURDOMAIN.COM> \
    --set rancherImage=<REGISTRY.YOURDOMAIN.COM:PORT>/rancher/rancher \
    --set ingress.tls.source=secret \
    --set systemDefaultRegistry=<REGISTRY.YOURDOMAIN.COM:PORT> \ # Set a default private registry to be used in Rancher
    --set useBundledSystemChart=true # Use the packaged Rancher system charts
----

If you are using a Private CA signed cert, add `--set privateCA=true` following `--set ingress.tls.source=secret`:

[,plain]
----
   helm install rancher ./rancher-<VERSION>.tgz \
    --namespace cattle-system \
    --set hostname=<RANCHER.YOURDOMAIN.COM> \
    --set rancherImage=<REGISTRY.YOURDOMAIN.COM:PORT>/rancher/rancher \
    --set ingress.tls.source=secret \
    --set privateCA=true \
    --set systemDefaultRegistry=<REGISTRY.YOURDOMAIN.COM:PORT> \ # Set a default private registry to be used in Rancher
    --set useBundledSystemChart=true # Use the packaged Rancher system charts
----

The installation is complete.

[CAUTION]
====

If you don't intend to send telemetry data, opt out xref:faq/telemetry.adoc[telemetry] during the initial login. Leaving this active in an air-gapped environment can cause issues if the sockets cannot be opened successfully.
====


== Additional Resources

These resources could be helpful when installing Rancher:

* {xref-rancher-extensions}#_importing_and_installing_extensions_in_an_air_gapped_environment[Importing and installing extensions in an air-gapped environment]
* {xref-helm-chart-options}[Rancher Helm chart options]
* {xref-tls-secrets}[Adding TLS secrets]
* {xref-install-upgrade-troubleshooting}[Troubleshooting Rancher Kubernetes Installations]
